# fxhoudinimcp-windows-agents

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  NOTICE.md  README.md  mkdocs.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: docs.yml  windows-portability.yml
0.1.0/: 404.html  index.html  objects.inv
0.1.0/changelog/: index.html
0.1.0/codex-windows/: index.html
0.1.0/how-to/: index.html
0.1.0/how-to/configuration/: index.html
0.1.0/how-to/tools/: index.html
0.1.0/installation/: index.html
0.1.0/search/: search_index.json
0.1.0/stylesheets/: extra.css
0.1.0/technical/: index.html
0.1.0/technical/SUMMARY/: index.html
0.1.0/technical/_loader/: index.html
0.1.0/technical/_specs/: index.html
0.1.0/technical/_types/: index.html
0.1.0/technical/_version/: index.html
0.1.0/technical/bridge/: index.html
0.1.0/technical/config/: index.html
0.1.0/technical/errors/: index.html
0.1.0/technical/prompts/: index.html
0.1.0/technical/protocol/: index.html
0.1.0/technical/resources/: index.html
0.1.0/technical/server/: index.html
0.1.0/technical/tool_profiles/: index.html
0.1.0/technical/tools/: index.html
0.1.0/windows-agents/: index.html
docs/: codex-windows.md  index.md  windows-agents.md
docs/how-to/: configuration.md  index.md  tools.md
houdini/: fxhoudinimcp.json
python/fxhoudinimcp/: _specs.py  bridge.py  tool_profiles.py
python/fxhoudinimcp/tools/: __init__.py  animation.py  cache.py  dops.py  geometry.py  graph.py  help.py  image.py  lops.py  materials.py  nodes.py  parameters.py  rendering.py  scene.py  tops.py  (+3 more)
scripts/windows/: bootstrap.ps1  install-houdini-package.ps1  run-full-validation.ps1  start-fxhoudinimcp.ps1  start-houdini-fork.ps1  uninstall-houdini-package.ps1  verify-hip-node-params.ps1
tests/: conftest.py  run_integration.ps1  test_bridge.py  test_dispatcher.py  test_mcp_stdio_e2e.py  test_runtime_capabilities.py  test_specs.py  test_tool_contract.py  test_tool_profiles.py  test_tools.py  test_windows_portability.py
tests/integration/: bridge_e2e.py  conftest.py  gui_session_check.py  mcp_stdio_live_e2e.py  test_benchmarks_live.py  test_command_coverage_live.py  test_geometry_vex_live.py  test_graph_live.py  test_instruction_accuracy_live.py  test_nodes_live.py  test_parameters_live.py  test_performance_gate_live.py  test_scene_live.py  test_tool_contract_live.py  test_workflows_live.py  visual_assertions.py
(+50 files in other folders)
