[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fxhoudinimcp"
dynamic = ["version"]
description = "Comprehensive MCP server for SideFX Houdini with 173 tools covering SOPs, LOPs/USD, DOPs, PDG/TOPs, COPs, HDAs, animation, rendering, VEX, and more"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["houdini", "mcp", "model-context-protocol", "vfx", "3d", "usd", "procedural", "sidefx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]
dependencies = [
    "mcp>=1.8.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]
mkdocs = [
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
    "mkdocs-git-revision-date-localized-plugin",
    "mkdocs-git-authors-plugin",
    "mkdocs-git-committers-plugin-2",
    "mkdocstrings[python]",
    "mike",
    "black",
]

[project.scripts]
fxhoudinimcp = "fxhoudinimcp.__main__:main"

[project.urls]
Homepage = "https://github.com/healkeiser/fxhoudinimcp"
Documentation = "https://healkeiser.github.io/fxhoudinimcp"
Repository = "https://github.com/healkeiser/fxhoudinimcp"
Issues = "https://github.com/healkeiser/fxhoudinimcp/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "no-guess-dev"

[tool.hatch.build.hooks.vcs]
version-file = "python/fxhoudinimcp/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["python/fxhoudinimcp"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["python"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["fxhoudinimcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires a live Houdini instance",
]
